Add base price parameter

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                         <input type="number" name="" id="costPerSqFt" placeholder="Enter cost in INR" onchange="calculateCost()" class="form-control">
                     </div>
                     <div class="form-group">
+                        <label>Base price</label>
+                        <input type="number" name="" id="basePrice" placeholder="Enter cost in INR" onchange="calculateCost()" class="form-control">
+                    </div>
+                    <div class="form-group">
                         <label>Possession Charges</label>
                         <input type="number" name="" id="possessionCharges" value="0" onchange="calculateCost()" class="form-control">
                     </div>
