Remove onchange from base price

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="form-group">
                         <label>Base price</label>
-                        <input type="number" name="" id="basePrice" placeholder="Enter cost in INR" onchange="calculateCost()" class="form-control">
+                        <input type="number" name="" id="basePrice" placeholder="Enter cost in INR" class="form-control">
                     </div>
                     <div class="form-group">
                         <label>Possession Charges</label>
