Add default value to cost per sq ft

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="form-group">
                         <label>Cost per square feet</label>
-                        <input type="number" name="" id="costPerSqFt" placeholder="Enter cost in INR (ex. 5400)" onchange="calculateCost()" class="form-control">
+                        <input type="number" name="" id="costPerSqFt" value="5500" onchange="calculateCost()" class="form-control">
                     </div>
                     <div class="form-group">
                         <label>Base price</label>
