User can now vary base price and see the calculations change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="form-group">
                         <label>Base price</label>
-                        <input type="number" name="" id="basePrice" class="form-control">
+                        <input type="number" name="" id="basePrice" class="form-control" onchange="basePriceChange()">
                     </div>
                     <div class="form-group">
                         <label>Possession Charges</label>
@@ -30,23 +30,23 @@
                     </div>
                     <div class="form-group">
                         <label>Registry Cost 5%</label>
-                        <input type="number" name="" id="registryCharges" class="form-control">
+                        <input type="number" name="" id="registryCharges" class="form-control" readonly>
                     </div>
                     <div class="form-group">
                         <label>Commision Charges 1%</label>
-                        <input type="number" name="" id="commisionCharges" class="form-control">
+                        <input type="number" name="" id="commisionCharges" class="form-control" readonly>
                     </div>
                     <div class="form-group">
                         <label><b>Total Cost of raw flat</b></label>
-                        <input style="font-weight: 500;" type="number" name="" id="costOfRawFlat" class="form-control">
+                        <input style="font-weight: 500;" type="number" name="" id="costOfRawFlat" class="form-control" readonly>
                     </div>
                     <div class="form-group">
                         <label>Total Cost including basic Furnishing</label>
-                        <input type="number" name="" id="totalCostWithFurnishing" class="form-control">
+                        <input type="number" name="" id="totalCostWithFurnishing" class="form-control" readonly>
                     </div>
                     <div class="form-group">
                         <label>Transfer Cost (if applicable)</label>
-                        <input type="number" name="" id="transferCost" class="form-control">
+                        <input type="number" name="" id="transferCost" class="form-control" readonly>
                     </div>
                 </form>
             </div>
