change footer text and limit cost per sq ft to 1 decimal point

--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
                 </form>
             </div>
             <div class="card-footer text-center bg-light"> 
-                    <b>The forms doesn't require a submit button, just press enter after you are done entering a value.</b>
-                <br>Basic furnishing includes wardrobes and modular kitchen.
-                <br> Tranfer charges -> 421 per SqFt
-                <br> &#169; 2020 Rachit Sharma</div>
+                <br> Basic furnishing includes wardrobes and modular kitchen.
+                <br> Transfer charges are 421 per SqFt
+                <br> &#169; 2020 Occult Labs</div>
         </div>
     </div>
 <script src="cost.js"></script>
